# imdb-fastapi

./: README.md  main.py  pyproject.toml  requirements.txt  scaling_problem.txt  test.py
server/: app.py  connections.py
server/admin/models/: database.py  schema.py
server/admin/routes/: views.py
server/imdb/models/: database.py  schema.py
server/imdb/routes/: views.py
tests/: test_imdb_fastapi.py
