[tool.poetry]
name = "imdb-fastapi"
version = "0.1.0"
description = ""
authors = ["jaykakadiya18 <jaykakadiya2014@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.63.0"
motor = "2.2.0"
pydantic = "1.9.0"
python-decouple = "3.4"
uvicorn = "0.13.4"
pytest = "6.2.2"
pathlib = "1.0.1"
requests = "pyjwt"
passlib = "bcrypt"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
